--- a/web/templates/result.html
+++ b/web/templates/result.html
@@ -2,5 +2,7 @@
 
 {% block content %}
     <h1>Results</h1>
-    <img src="{{ img }}">
+    <div class="imgbox">
+        <img class="center-fit" src="{{ img }}">
+    </div>
 {% endblock %}
