--- a/web/templates/load.html
+++ b/web/templates/load.html
@@ -2,9 +2,9 @@
 
 {% block content %}
     <h1>{{ content }}</h1>
-    <form action = "http://localhost:5000/uploader" method = "POST" 
+    <form action = "/uploader" method = "POST" 
          enctype = "multipart/form-data">
-         <input type = "file" name = "file" />
+         <input type = "file" name = "file" accept="image/png, image/jpeg, image/jpg" /> 
          <input type = "submit"/>
       </form>
 
