--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -1,5 +1,9 @@
 {% extends "base.html" %}
 
+
 {% block content %}
-    <h1>Hi!</h1>
+    <h1>welcome to toonoisy</h1>
+    <p>to reduce noise in an image, go to <a href="/reduce">reduce.</a></p>
+    <p>to read more about noise reduction, go to <a href="/about">about.</a> </p>
+
 {% endblock %}
