--- a/web/templates/load.html
+++ b/web/templates/load.html
@@ -1,8 +1,9 @@
 {% extends "base.html" %}
 
+
 {% block content %}
     <h1>{{ content }}</h1>
-    <form action = "/uploader" method = "POST" 
+    <form action = "/load" method = "POST" 
          enctype = "multipart/form-data">
          <input type = "file" name = "file" accept="image/png, image/jpeg, image/jpg" /> 
          <input type = "submit"/>
