changed toonoisy weight

--- a/web/templates/about.html
+++ b/web/templates/about.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
 
 {% block content %}
-    <h1>About tooNOISY</h1>
+    <h1>about <light>too</light><strong>noisy</strong></h1>
 {% endblock %}
