--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -2,7 +2,7 @@
 
 
 {% block content %}
-    <h1>welcome to toonoisy</h1>
+    <h1>welcome to <light>too</light><strong>noisy</strong></h1>
     <p>to reduce noise in an image, go to <a href="/reduce">reduce.</a></p>
     <p>to read more about noise reduction, go to <a href="/about">about.</a> </p>
 
