--- a/web/templates/base.html
+++ b/web/templates/base.html
@@ -24,7 +24,7 @@
     <body>
         <nav class="navbar sticky-top navbar-expand-lg navbar-light bg-light">
             <div class="container-fluid">
-              <a class="navbar-brand" href="/">toonoisy</a>
+              <a class="navbar-brand" href="/"><light>too</light><strong>noisy</strong></a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
               </button>
