implemented save button for results

--- a/web/templates/result.html
+++ b/web/templates/result.html
@@ -9,9 +9,9 @@
         </a>
       
         <ul class="dropdown-menu">
-          <li><a class="dropdown-item" href="{{url_for('save_result')}}" method="POST">save</a></li>
-          <li><a class="dropdown-item" href="#"> change method </a></li>
-          <li><a class="dropdown-item" href="#"> new image </a></li>
+          <li><a class="dropdown-item" href="{{ img }}" download>save</a></li>
+          <!-- <li><a class="dropdown-item" href="#"> original image </a></li>
+          <li><a class="dropdown-item" href="#"> new image </a></li> -->
         </ul>
     </div>
 
