--- a/web/templates/base.html
+++ b/web/templates/base.html
@@ -17,11 +17,10 @@
             <link rel="stylesheet" href="{{ url_for('static', filename='css/main.css') }}">
         {% endblock %}
 
-        
-
         {% endblock %}
     </head>
     <body>
+      <div class="pattern" >
         <nav class="navbar sticky-top navbar-expand-lg navbar-light bg-light">
             <div class="container-fluid">
               <a class="navbar-brand" href="/"><light>too</light><strong>noisy</strong></a>
@@ -36,11 +35,13 @@
               </div>
             </div>
           </nav>
-        {% block content %}{% endblock %}
-        
+          
+          {% block content %}{% endblock %}
+         
         {% block scripts %}
             <!-- Bootstrap JS -->
             {{ bootstrap.load_js() }}
         {% endblock %}
+      </div>
     </body>
 </html>
