--- a/web/templates/img_loaded.html
+++ b/web/templates/img_loaded.html
@@ -1,8 +1,8 @@
 {% extends "base.html" %}
 
 {% block content %}
-    <h1>your image:</h1>
-    <img class="img-fluid smallimage" src="{{ img }}">
+    <h1 >your image</h1>
+    <img class="img-fluid img" src="{{ img }}">
     <h2>noise reduction options:</h2>
     <form action = "/result" method = "POST" 
          enctype = "multipart/form-data">
