--- a/web/templates/result.html
+++ b/web/templates/result.html
@@ -1,8 +1,8 @@
 {% extends "base.html" %}
 
 {% block content %}
-    <h1 >result:</h1>
-    <img class="img-fluid smallimage float-start" src="{{ img }}">
+    <h1 class="center" >result:</h1>
+    <img class="img-fluid img" src="{{ img }}">
     <div class="dropdown">
         <a class="btn btn-secondary dropdown-toggle" role="button" data-bs-toggle="dropdown" aria-expanded="false">
           Options
