--- a/web/templates/load.html
+++ b/web/templates/load.html
@@ -3,10 +3,10 @@
 
 {% block content %}
     <h1>{{ content }}</h1>
-    <form action = "/load" method = "POST" 
+    <form class="input-group mb-3" action = "/load" method = "POST" 
          enctype = "multipart/form-data">
-         <input type = "file" name = "file" accept="image/png, image/jpeg, image/jpg" /> 
-         <input type = "submit"/>
+         <input type = "file" class="form-control" name = "file" accept="image/png, image/jpeg, image/jpg" /> 
+         <input class="input-group-text" type = "submit"/>
     </form>
 
 {% endblock %}
