added new buttons

--- a/web/templates/result.html
+++ b/web/templates/result.html
@@ -10,8 +10,8 @@
       
         <ul class="dropdown-menu">
           <li><a class="dropdown-item" href="{{ img }}" download>save</a></li>
-          <!-- <li><a class="dropdown-item" href="#"> original image </a></li>
-          <li><a class="dropdown-item" href="#"> new image </a></li> -->
+          <li><a class="dropdown-item" href="/compare"> side by side </a></li>
+          <li><a class="dropdown-item" href="#"> new image </a></li> 
         </ul>
     </div>
 
