--- a/web/static/css/main.css
+++ b/web/static/css/main.css
@@ -10,7 +10,7 @@ img {
   margin-left: auto;
   margin-right: auto;
   width: 300px;
-  min-width: 50%;
+  min-width: 40%;
 }
 .pattern{  
   position: absolute;
@@ -23,9 +23,26 @@ img {
   background-image: radial-gradient(#96979e 0.5px, #171718 0.5px);
   background-size: 20px 20px;
 }
-h1 {text-align: center;}
-p {text-align: center;}
-div {text-align: center;}
+h1, p, div {
+  text-align: center;
+}
 .navbar-toggler{
   border: 0px
+}
+.input-group{
+  margin: auto;
+  width: 500px;
+  min-width: 50%;
+}
+.column {
+  float: left;
+  width: 50%;
+  padding: 5px;
+}
+
+/* Clear floats after image containers */
+.row::after {
+  content: "";
+  clear: both;
+  display: table;
 }
