added and set up restart with same image button

--- a/web/templates/result.html
+++ b/web/templates/result.html
@@ -11,7 +11,8 @@
         <ul class="dropdown-menu">
           <li><a class="dropdown-item" href="{{ img }}" download>save</a></li>
           <li><a class="dropdown-item" href="/compare"> side by side </a></li>
-          <li><a class="dropdown-item" href="#"> new image </a></li> 
+          <li><a class="dropdown-item" href="/reload"> try again </a></li> 
+          <li><a class="dropdown-item" href="/reduce"> restart </a></li> 
         </ul>
     </div>
 
