--- a/web/templates/sidebyside.html
+++ b/web/templates/sidebyside.html
@@ -17,7 +17,8 @@
       
         <ul class="dropdown-menu">
           <li><a class="dropdown-item" href="{{ img_1 }}" download>save</a></li>
-          <li><a class="dropdown-item" href="#"> new image </a></li> 
+          <li><a class="dropdown-item" href="/reload"> try again </a></li> 
+          <li><a class="dropdown-item" href="/reduce"> restart </a></li> 
         </ul>
     </div>
 
