--- a/web/templates/base.html
+++ b/web/templates/base.html
@@ -15,6 +15,7 @@
             <!-- Bootstrap CSS -->
             {{ bootstrap.load_css() }}
             <link rel="stylesheet" href="{{ url_for('static', filename='css/main.css') }}">
+            <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Fira+Code">
         {% endblock %}
 
         {% endblock %}
