--- a/web/templates/load.html
+++ b/web/templates/load.html
@@ -2,11 +2,26 @@
 
 
 {% block content %}
-    <h1>{{ content }}</h1>
+    <h1>choose an image to process</h1>
+    <h3>load your own image:</h3>
     <form class="input-group input-bar mb-3" action = "/load" method = "POST" 
          enctype = "multipart/form-data">
          <input type = "file" class="form-control" name = "file" accept="image/png, image/jpeg, image/jpg" /> 
          <input class="input-group-text btn-secondary" type = "submit"/>
     </form>
+    <h3>or load an example image</h3>
+    <div class="row">
+        <div class="column">
+            <a href="/barbara" name="barbara">
+                <img class="img-fluid sample" style="margin-right:0px" src="https://storage.cloud.google.com/toonoisy_ims/barbara.png">
+            </a>
+        </div>
+        <div class="column">
+            <a href="/kodim" name="kodim">
+                <img class="img-fluid sample" style="margin-left:0px"  src="https://storage.cloud.google.com/toonoisy_ims/kodim.jpg">
+            </a>
+        </div>
+    </div>
+
 
 {% endblock %}
