--- a/web/templates/load.html
+++ b/web/templates/load.html
@@ -4,12 +4,13 @@
 {% block content %}
     <h1>choose an image to process</h1>
     <h3>load your own image:</h3>
+    <p>Images must be < 2MB and will be converted to grayscale</p>
     <form class="input-group input-bar mb-3" action = "/load" method = "POST" 
          enctype = "multipart/form-data">
          <input type = "file" class="form-control" name = "file" accept="image/png, image/jpeg, image/jpg" /> 
          <input class="input-group-text btn-secondary" type = "submit"/>
     </form>
-    <h3>or load an example image</h3>
+    <h3>or click below to load an example image:</h3>
     <div class="row">
         <div class="column">
             <a href="/barbara" name="barbara">
