--- a/web/templates/load.html
+++ b/web/templates/load.html
@@ -14,12 +14,12 @@
     <div class="row">
         <div class="column">
             <a href="/barbara" name="barbara">
-                <img class="img-fluid sample" style="margin-right:0px" src="https://storage.cloud.google.com/toonoisy_ims/barbara.png">
+                <img class="img-fluid sample" style="margin-right:0px" src="https://storage.googleapis.com/toonoisy_ims/barbara.png">
             </a>
         </div>
         <div class="column">
             <a href="/kodim" name="kodim">
-                <img class="img-fluid sample" style="margin-left:0px"  src="https://storage.cloud.google.com/toonoisy_ims/kodim.jpg">
+                <img class="img-fluid sample" style="margin-left:0px"  src="https://storage.googleapis.com/toonoisy_ims/kodim.jpg">
             </a>
         </div>
     </div>
