--- a/web/templates/img_loaded.html
+++ b/web/templates/img_loaded.html
@@ -2,62 +2,86 @@
 
 {% block content %}
     <h1 >your image</h1>
-    <img class="img-fluid img" style="width:80%; max-width:300px"  src="{{ img }}">
+    <img class="img-fluid img" style="width:350px; min-width: unset"  src="{{ img }}">
     <h2>noise reduction options:</h2>
         <div>
             <div class="settings">
-                <label for="sigma" class="h4"style="flex:left;">gaussian</label>
                 <form action = "/gauss" method = "POST" 
                     enctype = "multipart/form-data" class="input-group mb-3 align-middle variable-input "
                     style="flex:right;" >
                         <input type="number" name="sigma" id="#sigma" step=0.01 min=0.01 max=10 class="form-control" placeholder="1, 1.1..." aria-label="sigma" aria-describedby="button-addon2">
-                        <button id="gaussian" class="btn btn-secondary" data-bs-toggle="modal" data-bs-target="#processing" type = "submit">apply</button>
+                        <button id="gaussian" class="btn btn-secondary" data-bs-toggle="modal" data-bs-target="#processing" type = "submit">gaussian</button>
                     </form>
                 </div>
 
             
                 <div class="settings">
-                    <label for="sigma" class="h4"style="flex:left;">median</label>
                     <form action = "/median" method = "POST" 
                     enctype = "multipart/form-data" class="input-group mb-3 align-middle variable-input "
                     style="flex:right;" >
                         <input type="number" name="width" id="#width" step=1 min=1 max=5 class="form-control" placeholder="3 or 5" aria-label="sigma" aria-describedby="button-addon2">
-                        <button id="median" class="btn btn-secondary" data-bs-toggle="modal" data-bs-target="#processing" type = "submit">apply</button>
+                        <button id="median" class="btn btn-secondary" data-bs-toggle="modal" data-bs-target="#processing" type = "submit">median</button>
                     </form>
                 </div>
 
                 <div class="settings">
-                    <label for="sigma" class="h4"style="flex:left;">bilateral</label>
                     <form action = "/bilateral" method = "POST" 
                     enctype = "multipart/form-data" class="input-group mb-3 align-middle variable-input "
                     style="flex:right;" >
-                        <input type="number" name="sigd" id="#sigd" step=1 min=1 max=150 class="form-control" placeholder="10, 50, 100..." aria-label="sigma" aria-describedby="button-addon2">
-                        <input type="number" name="sigr" id="#sigr" step=1 min=1 max=150 class="form-control" placeholder="10, 50, 100..." aria-label="sigma" aria-describedby="button-addon2">
-                        <button id="bilateral" class="btn btn-secondary" data-bs-toggle="modal" data-bs-target="#processing" type = "submit">apply</button>
+                        <input type="number" name="sigd" id="#sigd" step=1 min=1 max=300 class="form-control" placeholder="10, 50, 100..." aria-label="sigma" aria-describedby="button-addon2">
+                        <input type="number" name="sigr" id="#sigr" step=1 min=1 max=300 class="form-control" placeholder="10, 50, 100..." aria-label="sigma" aria-describedby="button-addon2">
+                        <button id="bilateral" class="btn btn-secondary" data-bs-toggle="modal" data-bs-target="#processing" type = "submit">bilateral</button>
                     </form>
                 </div>
-            
+                
+                <button class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#help">help</button>
             
             </div>
             </div>
         </div>
         
-            <!-- Modal -->
+            <!-- Loading Modal -->
             <div class="modal fade" id="processing" tabindex="-1" aria-labelledby="processingLabel" aria-hidden="true">
                 <div class="modal-dialog">
                 <div class="modal-content">
                     <div class="modal-header">
-                    <h5 class="modal-title" id="exampleModalLabel">processing, please wait...</h5>
-                    <p>this might take a few moments.</p>
+                    <h5 class="modal-title" id="exampleModalLabel">processing, please wait...</h5>                    
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                     </div>
+                    <div class="modal-body"><p>this might take a few moments.</p></div>
                     <div class="modal-footer">
                     <button type="button" class="btn btn-primary" data-bs-dismiss="modal">ok</button>
                     </div>
                 </div>
                 </div>
             </div>
-       
+
+            <!-- Help Modal -->
+            
+            <div class="modal fade" id="help" tabindex="-1" role="dialog" aria-labelledby="help" aria-hidden="true">
+                <div class="modal-dialog modal-dialog-centered" role="document">
+                <div class="modal-content">
+                    <div class="modal-header">
+                    <h5 class="modal-title" id="helpTitle">user guide</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                    </div>
+                    <div class="modal-body">
+                    <h6>gaussian</h6>
+                    <p>enter a value between 1 and 10. this sets the standard deviation of the gaussian (so higher = more blur)</p>
+                    <h6>median</h6>
+                    <p>enter either 3 or 5. this sets the width of the window the medians are calculated from</p>
+                    <h6>bilateral</h6>
+                    <p>enter two values between 1 and 300, left and right determine the standard deviation of the spacial gaussian and
+                        intensity gaussian respectively (again, higher = more blurry)                        
+                    </p>
+                    <p>note: processing times for median and bilateral can be high for larger images</p>
+                    </div>
+                    <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                    </div>
+                </div>
+                </div>
+            </div>
 
     
 {% endblock %}
