added highlighting to help modal

--- a/web/templates/img_loaded.html
+++ b/web/templates/img_loaded.html
@@ -66,14 +66,15 @@
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                     </div>
                     <div class="modal-body">
-                    <h6>gaussian</h6>
-                    <p>enter a value between 1 and 10. this sets the standard deviation of the gaussian (so higher = more blur)</p>
-                    <h6>median</h6>
-                    <p>enter either 3 or 5. this sets the width of the window the medians are calculated from</p>
-                    <h6>bilateral</h6>
-                    <p>enter two values between 1 and 300, left and right determine the standard deviation of the spacial gaussian and
-                        intensity gaussian respectively (again, higher = more blurry)                        
+                    <h5>gaussian</h5>
+                    <p>enter a value between 1 and 10. this sets the <span class="text-info">standard deviation</span> of the gaussian</p>
+                    <h5>median</h5>
+                    <p>enter either 3 or 5. this sets the <span class="text-info">width</span> of the window the medians are calculated from</p>
+                    <h5>bilateral</h5>
+                    <p>enter two values between 1 and 300, left and right determine the standard deviation of the <span class="text-info">spacial</span> gaussian and
+                        <span class="text-info">intensity</span> gaussian respectively                    
                     </p>
+                    <p>in general here, <span class="text-info">higher = more blurred</span></p>
                     <p>note: processing times for median and bilateral can be high for larger images</p>
                     </div>
                     <div class="modal-footer">
