--- a/web/templates/result.html
+++ b/web/templates/result.html
@@ -1,19 +1,30 @@
 {% extends "base.html" %}
 
 {% block content %}
-    <h1 class="center" >result:</h1>
+    <h1 class="center" >{{ method }} applied:</h1>
     <img class="img-fluid img" src="{{ img }}">
-    <div class="dropdown">
+    <!-- Options -->
+    <div class="dropdown" style="display: inline;">
         <a class="btn btn-secondary dropdown-toggle" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-          Options
+          options
         </a>
-      
         <ul class="dropdown-menu">
+          <li><a class="dropdown-item" href="/compare"> compare with original </a></li>
           <li><a class="dropdown-item" href="{{ img }}" download>save</a></li>
-          <li><a class="dropdown-item" href="/compare"> side by side </a></li>
-          <li><a class="dropdown-item" href="/reload"> try again </a></li> 
-          <li><a class="dropdown-item" href="/reduce"> restart </a></li> 
+          <li><a class="dropdown-item" href="/reload"> new filter </a></li> 
+          <li><a class="dropdown-item" href="/reduce"> new image </a></li> 
         </ul>
     </div>
+    <!-- Sharpening -->
+    <div class="dropdown" style="display: inline;">
+      <a class="btn btn-secondary dropdown-toggle" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+        sharpen
+      </a>
+      <ul class="dropdown-menu">
+        <li><a class="dropdown-item" href="#"> k = 1 </a></li>
+        <li><a class="dropdown-item" href="#"> k = 3 </a></li> 
+        <li><a class="dropdown-item" href="#"> k = 5 </a></li> 
+      </ul>
+  </div>
 
 {% endblock %}
