--- a/web/templates/sidebyside.html
+++ b/web/templates/sidebyside.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 
 {% block content %}
-    <h1 class="center" >result:</h1>
+    <h1 class="center" >{{method}} applied:</h1>
     <div class="row">
       <div class="column">
         <img src="{{ img_1 }}" style="width:80%">
@@ -21,5 +21,16 @@
           <li><a class="dropdown-item" href="/reduce"> restart </a></li> 
         </ul>
     </div>
-
+    
+    <!-- Sharpening -->
+    <div class="dropdown" style="display: inline;">
+      <a class="btn btn-secondary dropdown-toggle" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+        sharpen
+      </a>
+      <ul class="dropdown-menu">
+        <li><a class="dropdown-item" href="#"> k = 1 </a></li>
+        <li><a class="dropdown-item" href="#"> k = 3 </a></li> 
+        <li><a class="dropdown-item" href="#"> k = 5 </a></li> 
+      </ul>
+  </div>
 {% endblock %}
