changed dropdown names

--- a/web/templates/sidebyside.html
+++ b/web/templates/sidebyside.html
@@ -17,20 +17,8 @@
       
         <ul class="dropdown-menu">
           <li><a class="dropdown-item" href="{{ img_1 }}" download>save</a></li>
-          <li><a class="dropdown-item" href="/reload"> try again </a></li> 
-          <li><a class="dropdown-item" href="/reduce"> restart </a></li> 
+          <li><a class="dropdown-item" href="/reload"> new filter </a></li> 
+          <li><a class="dropdown-item" href="/reduce"> new image </a></li> 
         </ul>
     </div>
-    
-    <!-- Sharpening -->
-    <div class="dropdown" style="display: inline;">
-      <a class="btn btn-secondary dropdown-toggle" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-        sharpen
-      </a>
-      <ul class="dropdown-menu">
-        <li><a class="dropdown-item" href="#"> k = 1 </a></li>
-        <li><a class="dropdown-item" href="#"> k = 3 </a></li> 
-        <li><a class="dropdown-item" href="#"> k = 5 </a></li> 
-      </ul>
-  </div>
 {% endblock %}
