--- a/web/templates/result.html
+++ b/web/templates/result.html
@@ -21,9 +21,12 @@
         sharpen
       </a>
       <ul class="dropdown-menu">
-        <li><a class="dropdown-item" href="#"> k = 1 </a></li>
-        <li><a class="dropdown-item" href="#"> k = 3 </a></li> 
-        <li><a class="dropdown-item" href="#"> k = 5 </a></li> 
+        <form action="/sharpen" method="POST" enctype = "multipart/form-data">
+          <li><button class="dropdown-item" href="/sharpen" name="sharpen_amount" id="#sharpen_amount" value="1" > k = 1 </button></li>
+          <li><button class="dropdown-item" href="/sharpen" name="sharpen_amount" id="#sharpen_amount" value="2" > k = 2 </button></li>
+          <li><button class="dropdown-item" href="/sharpen" name="sharpen_amount" id="#sharpen_amount" value="3" > k = 3 </button></li>
+        </form>
+        
       </ul>
   </div>
 
